jsonplaceholder.typicode.com/serviceentry-jsonplaceholder-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: jsonplaceholder-frontend
  namespace: frontend
  labels:
    service.istio.io/canonical-name: jsonplaceholder-frontend
spec:
  hosts:
  - jsonplaceholder.typicode.com
  location: MESH_EXTERNAL
  ports:
  - name: tls
    number: 443
    protocol: TLS
  resolution: DNS
