jsonplaceholder.typicode.com/serviceentry-jsonplaceholder.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: jsonplaceholder-frontend
  namespace: frontend
  labels:
    service.istio.io/canonical-name: jsonplaceholder-frontend
spec:
  hosts:
  - jsonplaceholder.typicode.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 443
  - name: https #tls
    number: 443
    protocol: HTTPS #TLS
  resolution: DNS
