jsonplaceholder.typicode.com/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: jsonplaceholder
  namespace: jsonplaceholder
  labels:
    service.istio.io/canonical-name: jsonplaceholder
spec:
  hosts:
  - jsonplaceholder.typicode.com
  location: MESH_EXTERNAL
  ports:
  - name: tls
    number: 443
    protocol: TLS
  resolution: DNS
